SERVER-23759 wait for repl startup before shutting down