src/mongo/db/repl/replication_coordinator_impl.h
@@ -276,8 +276,8 @@ public:
                                               const ReplSetRequestVotesArgs& args,
                                               ReplSetRequestVotesResponse* response) override;
 
-    void prepareReplMetadata(const OpTime& lastOpTimeFromClient,
-                             BSONObjBuilder* builder) const override;
+    virtual void prepareReplMetadata(const OpTime& lastOpTimeFromClient,
+                                     BSONObjBuilder* builder) const override;
 
     virtual Status processHeartbeatV1(const ReplSetHeartbeatArgsV1& args,
                                       ReplSetHeartbeatResponse* response) override;
@@ -325,7 +325,7 @@ public:
      * If called after startReplication(), blocks until all asynchronous
      * activities associated with replication start-up complete.
      */
-    void waitForStartUpComplete();
+    void waitForStartUpComplete_forTest();
 
     /**
      * Gets the replica set configuration in use by the node.
@@ -1123,6 +1123,12 @@ private:
      */
     void _finishCatchUpOplog_inlock(bool startToDrain);
 
+    /**
+     * Waits for the config state to leave kConfigStartingUp, which indicates that start() has
+     * finished.
+     */
+    void _waitForStartUpComplete();
+
     //
     // All member variables are labeled with one of the following codes indicating the
     // synchronization rules for accessing them.
@@ -1339,9 +1345,8 @@ private:
     // Used for testing only.
     Date_t _priorityTakeoverWhen;  // (M)
 
-    // Callback handle used by waitForStartUpComplete() to block until configuration
+    // Callback handle used by _waitForStartUpComplete() to block until configuration
     // is loaded and external state threads have been started (unless this node is an arbiter).
-    // Used for testing only.
     CallbackHandle _finishLoadLocalConfigCbh;  // (M)
 
     // The id of the earliest member, for which the handleLivenessTimeout callback has been
